[gd_scene load_steps=5 format=3 uid="uid://bd3v5vu26actu"]

[ext_resource type="StyleBox" uid="uid://6ey1ulrt3occ" path="res://assets/parts/frame.stylebox" id="1_q3aaj"]
[ext_resource type="StyleBox" uid="uid://b51cf2x3pfpfk" path="res://assets/parts/selected-frame.stylebox" id="2_m4xqd"]
[ext_resource type="Script" path="res://parts/TextView.gd" id="3_ah2hu"]
[ext_resource type="StyleBox" uid="uid://b4ts0xs184cax" path="res://assets/ui/popup-panel.stylebox" id="4_w0vtl"]

[node name="TextView" type="GraphNode"]
offset_left = 29.0
offset_top = 9.0
offset_right = 100.0
offset_bottom = 50.0
mouse_filter = 1
theme_override_constants/port_offset = -4
theme_override_styles/frame = ExtResource("1_q3aaj")
theme_override_styles/selected_frame = ExtResource("2_m4xqd")
slot/0/left_enabled = false
slot/0/left_type = 1
slot/0/left_color = Color(0, 0, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 1
slot/0/right_color = Color(0, 0, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(0.980392, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(0.980392, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
script = ExtResource("3_ah2hu")

[node name="Sp" type="Control" parent="."]
layout_mode = 2

[node name="Tag" type="LineEdit" parent="."]
visible = false
layout_mode = 2
alignment = 1
expand_to_text_length = true

[node name="ViewButton" type="Button" parent="."]
layout_mode = 2
disabled = true
text = "Open"

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
size = Vector2i(900, 500)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.txt ,*.hdl,*.tst,*.cmp; Text files")

[node name="C" type="CanvasLayer" parent="."]

[node name="Panel" type="PanelContainer" parent="C"]
top_level = true
custom_minimum_size = Vector2(300, 400)
offset_left = 26.0
offset_top = 66.0
offset_right = 326.0
offset_bottom = 466.0
theme_override_styles/panel = ExtResource("4_w0vtl")

[node name="M" type="MarginContainer" parent="C/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VB" type="VBoxContainer" parent="C/Panel/M"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="C/Panel/M/VB"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1

[node name="Label" type="RichTextLabel" parent="C/Panel/M/VB"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="HB" type="HBoxContainer" parent="C/Panel/M/VB"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="FileButton" type="Button" parent="C/Panel/M/VB/HB"]
layout_mode = 2
text = "Open File"

[node name="Sp" type="Control" parent="C/Panel/M/VB/HB"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="C/Panel/M/VB/HB"]
layout_mode = 2
text = "Close"

[connection signal="position_offset_changed" from="." to="." method="_on_position_offset_changed"]
[connection signal="pressed" from="ViewButton" to="." method="_on_view_button_pressed"]
[connection signal="canceled" from="FileDialog" to="." method="_on_file_dialog_canceled"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="pressed" from="C/Panel/M/VB/HB/FileButton" to="." method="_on_file_button_pressed"]
[connection signal="pressed" from="C/Panel/M/VB/HB/CloseButton" to="." method="_on_close_button_pressed"]
